<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/ProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_track" />

    <TextView
        style="@style/ProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_country" />

    <TextView
        style="@style/ProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email" />

    <TextView
        style="@style/ProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_phone_number" />

    <TextView
        style="@style/ProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_slack_username" />

</LinearLayout>